--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -34,8 +34,8 @@
   </ngb-pagination>
 
   <select class="custom-select" style="width: auto" [(ngModel)]="pageSize" (ngModelChange)="getPremiumData();">
-    <option [ngValue]="2">2 items per page</option>
-    <option [ngValue]="4">4 items per page</option>
-    <option [ngValue]="6">6 items per page</option>
+    <option [ngValue]="2">2 records per page</option>
+    <option [ngValue]="4">4 records per page</option>
+    <option [ngValue]="6">6 records per page</option>
   </select>
 </div>
